--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Plus+Jakarta+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+	<link rel="icon" type="image/png" href="/kudumbasree.png">
+	<link rel="shortcut icon" href="/kudumbasree.png" type="image/png">
     <style>
         body {
             font-family: 'Plus Jakarta Sans', sans-serif;
